[project]
name = "lightstack"
version = "0.1.0"
description = "Tools for building and processing multi-filter astrophysical datacubes"
authors = [{name = "Andressa Wille, Thallis Pessi"}]
dependencies = [
    "numpy",
    "astropy",
    "matplotlib",
    "reproject",
    "regions",
    "scipy",
    "photutils"
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
