[project]
name = "lightstack"
version = "0.1.4"
description = "Tools for building and processing multi-filter astrophysical datacubes"
readme = "README.md"
authors = [{name = "Andressa Wille"}, {name="Thallis Pessi"}]
dependencies = [
    "numpy",
    "astropy",
    "matplotlib",
    "reproject",
    "regions",
    "scipy",
    "photutils"
]
license = {file = "LICENSE"}

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
